--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
       <section>
         <h1>Nodeclipse.github.io</h1>
 
-<p>This is GitHub page of Nodeclipse projects.</p>
+<p>This is <a href="http://nodeclipse.github.io/">GitHub page</a> of Nodeclipse projects.</p>
 
 <p><b>The main web site is <a href="http://www.nodeclipse.org/">http://www.nodeclipse.org/</a></b></p>
 
 <p>As our users are software developers, we expect that you are comfortable
 with browsing GitHub repositories at <a href="https://github.com/Nodeclipse">https://github.com/Nodeclipse</a>.
 Each repository has README.md file with enough introduction.
-However if you want to contribute, you should contact developers first.</p>
+However if you want to contribute, you should contact developers first,
+as for example you idea may be already discussed, also please take time to learn existing projects.</p>
 
 <p>The core plugin is <a href="https://github.com/Nodeclipse/nodeclipse-1">Nodeclipse-1</a></p>
 
 <p>For Eclipse distribution with Nodeclipse &amp; Node.js IDE preinstalled check
 Nodeclipse NTS at <a href="https://sourceforge.net/projects/nodeclipse/">https://sourceforge.net/projects/nodeclipse/</a> (Beta).</p>
 
-<p>The easyest way to support the projects is add star to the the project you like. 
+<p>The easiest way to support the projects is add star to the the project you like. 
 (You need to have GitHub account and be logged in.)</p>
       </section>
       <footer>
