Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 with browsing GitHub repositories at <a href="https://github.com/Nodeclipse">https://github.com/Nodeclipse</a>.
 Each repository has README.md file with enough introduction.
 However if you want to contribute, you should contact developers first,
-as for example you idea may be already discussed, also please take time to learn existing projects.</p>
+as for example your idea may be already discussed, also please take time to learn existing projects.</p>
 
 <p>The core plugin is <a href="https://github.com/Nodeclipse/nodeclipse-1">Nodeclipse-1</a></p>
 
