publish Code Standard

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ Each repository has README.md file with enough introduction.
 However if you want to contribute, you should contact developers first,
 as for example your idea may be already discussed, also please take time to learn existing projects.</p>
 
+<p>Code standard <a href="https://github.com/Nodeclipse/Nodeclipse.github.io/blob/master/CodeStyle_codetemplates.xml">CodeStyle_codetemplates.xml</a></p>
+
 <p>The core plugin is <a href="https://github.com/Nodeclipse/nodeclipse-1">Nodeclipse-1</a></p>
 
 <p>For Eclipse distribution with Nodeclipse &amp; Node.js IDE preinstalled check
