TOC & doc links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Nodeclipse.github.io</h1>
-        <p>GitHub page of Nodeclipse projects</p>
+        <p>Resource for Nodeclipse developers</p>
 
 
         <p class="view"><a href="https://github.com/Nodeclipse">View My GitHub Profile</a></p>
