http://nodeclipse.github.io/dev/

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <p><b>The main web site is <a href="http://www.nodeclipse.org/">http://www.nodeclipse.org/</a></b></p>
 
+<p><b>Maven-generated site is <a href="http://nodeclipse.github.io/dev/">http://nodeclipse.github.io/dev/</a></b></p>
+
 <p>As our users are software developers, we expect that you are comfortable
 with browsing GitHub repositories at <a href="https://github.com/Nodeclipse">https://github.com/Nodeclipse</a>.
 Each repository has README.md file with enough introduction.
